--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/rdcalle/react-export-excel#readme",
   "dependencies": {
     "file-saver": "1.3.8",
-    "xlsx": "git+https://github.com/securedeveloper/js-xlsx.git"
+    "xlsx": "^0.15.4"
   },
   "devDependencies": {
     "@commitlint/cli": "6.1.3",
@@ -53,6 +53,7 @@
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-dom": "16.0.0",
+    "run-node": "^2.0.0",
     "standard-version": "4.2.0"
   },
   "scripts": {
